--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -25,6 +25,12 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="js/angular.js"></script>
 
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -72,10 +78,7 @@
             <h3 class="standout-text-dark">University of Washington</h3>
             <h1 class="standout-text-dark">Human Powered Submarine Team</h1>
             <br>
-            <ul>
-                <a href="#sponsor" class="btn btn-dark btn-lg"> Be A Sponsor</a>
-                <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
-            </ul>
+            <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
     </header>
 
@@ -113,7 +116,7 @@
                                         <strong>The Hull</strong>
                                     </h4>
                                     <p>A jaw-dropping team of sculptors erect the aerodynamic hull.</p>
-                                    <a href="#" class="btn btn-light">Learn More</a>
+                                    <a href="#panel" class="btn btn-light" ng-click="showTheseDetails()">Learn More</a>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
@@ -126,7 +129,7 @@
                                         <strong>The Fins</strong>
                                     </h4>
                                     <p>An incredible team of workshopmen carefully craft the sexy-looking fins.</p>
-                                    <a href="#" class="btn btn-light">Learn More</a>
+                                    <a href="#panel" class="btn btn-light" ng-click="showDetails = ! showDetails">Learn More</a>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
@@ -139,7 +142,7 @@
                                         <strong>The Tech</strong>
                                     </h4>
                                     <p>A godlike team of CS and EE dudes code the gnarly Rasberry Pi Tech.</p>
-                                    <a href="#" class="btn btn-light">Learn More</a>
+                                    <a href="#panel" class="btn btn-light" ng-click="showDetails = ! showDetails">Learn More</a>
                                 </div>
                             </div>
                             <div class="col-md-3 col-sm-6">
@@ -152,7 +155,33 @@
                                         <strong>The Human</strong>
                                     </h4>
                                     <p>One human, trains INSANELY hard, all year, as their vessel is prepared.</p>
-                                    <a href="#" class="btn btn-light">Learn More</a>
+                                    <a href="#panel" class="btn btn-light" ng-click="showDetails = ! showDetails">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6" style="margin-left: 20vw;">
+                                <div class="service-item">
+                                    <span class="fa-stack fa-4x">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                    </span>
+                                    <h4>
+                                        <strong>The Human</strong>
+                                    </h4>
+                                    <p>One human, trains INSANELY hard, all year, as their vessel is prepared.</p>
+                                    <a href="#panel" class="btn btn-light" ng-click="showDetails = ! showDetails">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6">
+                                <div class="service-item">
+                                    <span class="fa-stack fa-4x">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                    </span>
+                                    <h4>
+                                        <strong>The Human</strong>
+                                    </h4>
+                                    <p>One human, trains INSANELY hard, all year, as their vessel is prepared.</p>
+                                    <a href="#panel" class="btn btn-light" ng-click="showDetails = ! showDetails">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -163,6 +192,12 @@
                 <!-- /.row -->
             </div>
             <!-- /.container -->
+            <div id="panel" class="infopanel" ng-show="showDetails">
+                <p>Over the past few years, the team has nearly doubled in size and its competitive performance has increased dramatically. At the 2015 International Submarine Races (ISR), we set a new UW record at 6.01 knots (placing 2nd in the male-piloted category) and our female pilot set a school record of 5.44 knots (placing 1st for women; a mere 0.06 knots from the ISR World Record). </p>
+                <img src="img/humpsub.jpg" style="height: 128px; width: 128px;">
+            </div>
+
+            </div>
         </section>
 
         <!-- Callout -->
@@ -225,11 +260,31 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h3>Help our Team Achieve New Heights!</h3>
-                        <a href="mailto:hps@uw.edu" class="btn btn-lg btn-light">Sponsor Us!</a>
-                        <a href="https://uw.useed.net/projects/389/home" class="btn btn-lg btn-dark">Learn More!</a>
+                        <a href="" class="btn btn-lg btn-light" ng-click="showSponsorPitch = ! showSponsorPitch">Sponsor Us!</a>
+                        <a href="https://www.washington.edu/giving/make-a-gift/?page=funds&source_typ=2&source=EDZ" class="btn btn-lg btn-dark">Donate!</a>
+                        <a href="#panel" class="btn btn-lg btn-light" ng-click="showMailingList = ! showMailingList">Follow Us!</a>
                     </div>
                 </div>
             </div>
+            <div id="spacer" style="height: 50px;"></div>
+            <div ng-show="showMailingList">
+                Join our Mailing List!
+                <form style="color:black;">
+                    Name:<br>
+                    <input id="mailing-list-name" type="text" name="firstname"><br>
+                    Email:<br>
+                    <input id="mailing-list-email" type="text" name="lastname">
+                </form>
+                <button type="submit" style="color: black;" onclick="writeNewEmail()"> Submit </buton>
+            </div>
+            <div ng-show="showSponsorPitch">
+                Here are some reasons you should sponsor us
+                <ul>
+                    <li> We are awesome</li>
+                    <li> We have a dope ass Website</li>
+                    <li> What Sub Dawg. We rest our case</li>
+                </ul>
+                <a href="mailto:hps@uw.edu" class="btn btn-lg btn-light">Sponsor Us!</a>
         </div>
 
         <!-- Map -->
@@ -265,7 +320,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Contact Us</strong>
                     </h4>
-                    <p>Mechanical Engineering Deparment,
+                    <p>Mechanical Engineering Department,
                         <br>Seattle, Washington, 98105</p>
                         <ul class="list-unstyled">
                             <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
@@ -293,11 +348,41 @@
 
         </footer>
 
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <!-- Firebase Setup -->
+        <script src="https://www.gstatic.com/firebasejs/3.3.2/firebase.js"></script>
+        <script>
+          // Initialize Firebase
+          var config = {
+            apiKey: "AIzaSyCyVeNQHeuiqeskX_hZymQb53ETg8RaNwU",
+            authDomain: "uwhumanpoweredsubmarineteam.firebaseapp.com",
+            databaseURL: "https://uwhumanpoweredsubmarineteam.firebaseio.com",
+            storageBucket: "",
+          };
+          firebase.initializeApp(config);
+          // Get a reference to the database service
+          var database = firebase.database();
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+          function writeNewEmail() {
+              var anEmail = document.getElementById('mailing-list-email').value;
+              var aName = document.getElementById('mailing-list-name').value;
+              var contactData = {
+                  name: aName,
+                  email : anEmail
+              };
+              // Get new Contact's Key
+              var newContactsKey = firebase.database().ref().child('contacts').push().key;
+              console.log('hello');
+              // Update with Data
+              var updates = {};
+              updates['/contacts/' + newContactsKey] = contactData;
+
+              return firebase.database().ref().update(updates);
+              console.log('hello');
+
+          }
+
+        </script>
+
 
         <!-- Custom Theme JavaScript -->
         <script>
