Minor Changes made... yes I forgot

--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -297,7 +297,7 @@
         </iframe>
     </section>
 
-    <div class="container" style="background: #337ab7; margin: 0px; width: 100vw; color: white;">
+    <div class="container" style="background: white; margin: 0px; width: 100vw; color: #337ab7;">
         <div class="col-lg-10 col-lg-offset-1">
             <div class="row" style="text-align:center;">
                 <div class="col-md-3 col-sm-6">
@@ -317,30 +317,30 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
+                <div class="col-lg-10 col-lg-offset-1 text-center" style="color: white;">
                     <h4><strong>Contact Us</strong>
                     </h4>
                     <p>Mechanical Engineering Department,
                         <br>Seattle, Washington, 98105</p>
                         <ul class="list-unstyled">
                             <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:contact@uwhps.com">contact@uwhps.com</a>
+                            <li><i class="fa fa-envelope-o fa-fw" ></i> <a href="mailto:contact@uwhps.com"style="color: white;">contact@uwhps.com</a>
                             </li>
                         </ul>
                         <br>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/uwhps/"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                                <a href="https://www.facebook.com/uwhps/" style="color: white;"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/uwhps/"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                                <a href="https://www.instagram.com/uwhps/" style="color: white;"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                                <a href="#" style="color: white;"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                             </li>
                         </ul>
                         <hr class="small">
-                        <p class="text-muted">Created By: Varun Viswanath 2016</p>
+                        <p class="text-muted" style="color: white;">Created By: Varun Viswanath 2016</p>
                     </div>
                 </div>
             </div>
