--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -75,8 +75,9 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h2 class="standout-text-dark">Mechanical Engineering</h2>
-            <h3 class="standout-text-dark">University of Washington</h3>
+            <h2 class="standout-text-dark" style="font-weight:500">Mechanical Engineering</h2>
+            <h3 class="standout-text-dark" style="font-weight:500">University of Washington</h3>
+            <div class="spacer" style="height: 20px"></div>
             <h1 class="standout-text-dark">Human Powered Submarine Team</h1>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
@@ -88,19 +89,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 style="font-family:Raleway;">Who are we?</h2>
-                        <p class="lead">We are engineers. We are designers. <br> We are machinists, coders, athletes, and divers.<br> </p>
+                    <h1 style="font-family:Raleway; font-size:38px;">Who are we?</h2>
+                        <!-- <p class="lead">We are engineers. We are designers. <br> We are machinists, coders, athletes, and divers.<br> </p> -->
 
-                        <p class="lead">We are a community of driven students from across the University of Washington <br> who believe that everyone is capable of impactful and original work.<br> </p>
+                        <p class="lead"><br>We are a community of driven students from across the University of Washington <br> who believe that everyone is capable of impactful and original work.<br> </p>
 
                         <p class="lead">Every year, we come together to share our passion with others,<br>and build the fastest human powered submarine in the world.<br> </p>
 
-                        <p class="lead">Welcome, to UW Human Powered Sub.<br> </p>
+                        <p class="lead" style="font-size: 30px;"><br>Welcome, to UW Human Powered Sub.<br> </p>
 
-                        <div id="spacer" style="height: 25px;"></div>
+                        <div id="spacer" style="height: 30px;"></div>
 
                         <a href="#services" id="about-next-button"><i class="fa fa-angle-down fa-5x" style="color:#333;"></i></a>
-                        <div id="spacer" style="height: 25px;"></div>
+                        <div id="spacer" style="height: 30px;"></div>
 
                     </div>
 
@@ -242,14 +243,14 @@
         </div>
 
         <!-- Map -->
-        <section id="contact" class="map">
+        <!-- <section id="contact" class="map">
             <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17568.991642314435!2d-122.30761645854315!3d47.6503241912226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014929d8535eb%3A0x6b742c7901b82ba3!2sUniversity+of+Washington!5e0!3m2!1sen!2sus!4v1472016397453" ></iframe>
             <br />
             <small>
                 <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17568.991642314435!2d-122.30761645854315!3d47.6503241912226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014929d8535eb%3A0x6b742c7901b82ba3!2sUniversity+of+Washington!5e0!3m2!1sen!2sus!4v1472016397453"></a>
             </small>
         </iframe>
-    </section>
+    </section> -->
 
     <div class="container" style="margin: 0px; width: 100vw; color: #337ab7; background:white;">
         <div>
@@ -276,8 +277,7 @@
                     <p>Mechanical Engineering Department,
                         <br>Seattle, Washington, 98105</p>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                            <li><i class="fa fa-envelope-o fa-fw" ></i> <a href="mailto:contact@uwhps.com"style="color: white;">contact@uwhps.com</a>
+                            <li><i class="fa fa-envelope-o fa-fw" ></i> <a href="mailto:uwhpsub@gmail.com"style="color: white;">uwhpsub@gmail.com</a>
                             </li>
                         </ul>
                         <br>
@@ -289,7 +289,7 @@
                                 <a href="https://www.instagram.com/uwhps/" style="color: white;"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
                             </li>
                             <li>
-                                <a href="#" style="color: white;"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                                <a href="https://www.youtube.com/user/UWHPSub" style="color: white;"><i class="fa fa-youtube fa-fw fa-3x"></i></a>
                             </li>
                         </ul>
                         <hr class="small">
